Fix left sidebar sticking out when collapsed.

--- a/stylesheets/genre-pills.css
+++ b/stylesheets/genre-pills.css
@@ -18,7 +18,7 @@
 }
 
 .collapsed {
-  left: -15rem;
+  left: -16rem;
 }
 
 .genre-pill-header {
